--- a/build.gradle
+++ b/build.gradle
@@ -21,5 +21,6 @@ dependencies {
     compile 'org.slf4j:slf4j-simple:1.7.21'
     compile 'org.sql2o:sql2o:1.5.4'
     compile group: 'com.h2database', name: 'h2', version: '1.4.191'
+    compile group: 'org.apache.velocity', name: 'velocity', version: '1.7'
 }
 task stage(dependsOn: ['clean', 'installDist'])
